	MDS, configurable and valid tie treatment, handles missing values,
	and allows adding new points to existing ordinations. The Fortran
	code is highly tuned, and much faster than other alternatives in
	R. The R interfaces allows access to most features of the Fortan90
	code, except adding new points to the ordination (which will need
	a separate function). The function will eventually replaces
	isoMDS() of the MASS package as the main NMDS engine in metaMDS().
	
Version 1.18-27 (closed April 1, 2011)

	* orderingKM: Kurt Hornik found a problem when inspecting the
	Fortran subroutines with gcc 4.6 tools when checking vegan release
	1.17-9. 
	
Version 1.18-26 (closed March 31, 2011)

	* version closed with the release of vegan 1.17-9.

	* oecosimu: added argument 'tiesplit' (defaults FALSE). If TRUE,
	simulated values tied with the observed statistic are split so
	that half of them are regarded as satisfying the condition, and
	removed from those cases which are greater or less (as given by
	'alternative'). This is usually *not* done, but implementing
	Raup-Crick dissimilarity in oecosimu() following
	http://www.esajournals.org/doi/pdf/10.1890/ES10-00117.1 (Chase et
	al., Ecosphere 2011) uses this option. However, cross-checking
	the "r0" null model against the vegdist(..., "raup") indicates
	that the options should be set FALSE (and this would mean that the
	change is reverted).

	* anova.ccabyaxis: I (JO) noticed in an ORDNEWS message that
	anova(..., by = "axis") ignores the original Conditions in partial
	models and so gives wrong results in partial models. The fix finds
	the conditioning matrix as qr.X(object$pCCA$QR), and uses this as
	a Condition in updated models. Added a regression test that checks
	that statistics and residual df match.

	* tolerance: new function to compute species tolerances and sample
	heterogeneities as Canoco does. Includes a method for objects of
	class "cca".

	* plot.contribdiv: plot now draws axes and box *after* doing the